# py_tokenizer

./: .gitignore  CMakeFiles.txt  CMakeLists.txt  MANIFEST.in  MIT  README.md  __init__.py  file_info.json  main.cpp  pyproject.tomal  pyproject.toml  tokenizer  vocabulary.json
.github/workflows/: build.yml  publish.yml
engine/: basic_engine.cpp  basic_engine.h  engine.cpp  engine.h
example/: basic_engine_example.py  engine_example.py
include/tokenizer/: encoder.h  freq_finder.h  loader.h  merger.h  provider.h  splitter.h
src/: binding.cpp  encoder.cpp  freq_finder.cpp  loader.cpp  merger.cpp  provider.cpp  splitter.cpp
